--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -13,11 +13,13 @@
     "expo": "~48.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
+    "expo-google-fonts": "0.0.0",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-web": "~0.18.11",
     "styled-components": "^5.3.9"
   },
