--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web",
     "apk": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "android:apk": "cd android/ ./gradlew assembleDebug"
-    
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
@@ -17,11 +16,12 @@
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
     "expo-google-fonts": "0.0.0",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.10.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-web": "~0.18.11",
