--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
+    "@hookform/resolvers": "^3.1.0",
+    "@react-navigation/native": "^6.1.6",
     "expo": "~48.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
@@ -20,12 +22,16 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-web": "~0.18.11",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "yup": "^1.1.1",
+    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
