--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.1.1",
@@ -31,9 +32,11 @@
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.11",
     "styled-components": "^5.3.9",
+    "victory-native": "^36.6.10",
     "yup": "^1.1.1"
   },
   "devDependencies": {
