--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.18.11",
     "styled-components": "^5.3.9",
     "victory-native": "^36.6.10",
-    "yup": "^1.1.1"
+    "yup": "^1.1.1",
+    "expo-auth-session": "~4.0.3",
+    "expo-random": "~13.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
