--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.11",
     "expo-app-loading": "^2.1.1",
+    "expo-auth-session": "~4.0.3",
     "expo-font": "~11.1.1",
     "expo-google-fonts": "0.0.0",
+    "expo-random": "~13.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -38,9 +42,7 @@
     "react-native-web": "~0.18.11",
     "styled-components": "^5.3.9",
     "victory-native": "^36.6.10",
-    "yup": "^1.1.1",
-    "expo-auth-session": "~4.0.3",
-    "expo-random": "~13.1.1"
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
